# Delaunay-Flow

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-single-platform.yml
cmake/: embed_shaders.cmake
headers/: application.hpp  color_interpolation.hpp  raii.hpp  renderer.hpp  settings.hpp  shader_sources.hpp  shader_utils.hpp  star.hpp  star_system.hpp  types.hpp
include/delaunator/: delaunator.cpp  delaunator.hpp
include/delaunay_flow/: settings.hpp
include/glad/: glad.c
include/triangle/: triangle.h
include/wallpaper-host/: desktop_utils.hpp  tray_utils.hpp
lib/: triangle.lib  wallpaper_host_static_mt.lib  wallpaper_host_static_mtd.lib
resource/: Resource.rc  settings.json
shaders/: fragment.glsl  vertex.glsl
src/: application.cpp  color_interpolation.cpp  desktopUtils.cpp  main.cpp  raii.cpp  renderer.cpp  settings.cpp  settings.h  shader_utils.cpp  star.cpp  star.h  star_system.cpp  trayUtils.cpp  trayUtils.h  utils.cpp  utils.h
